# genwiki2024

./: .gitignore  .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
genwiki/: addressbook.py  convert.py  genwiki_cmd.py  genwiki_paths.py  gov_api.py  locator.py  multilang_querymanager.py  nominatim.py  params_view.py  parquet.py  query_view.py  template.py  version.py  webserver.py  wiki.py  wikidata.py  wikidata_view.py
genwiki_examples/: addressbook.puml  location.puml  queries.yaml  region_lookup.json  weimarTH1851.parquet  weimarTH1853.parquet
scripts/: blackisort  geticon  geticons  neo4j
search/: search_index.json
tests/: gbasetest.py  test_categories.py  test_location.py  test_parquet.py
