[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genwiki2024"
description = "nicesprinkler"
keywords = ["nicegui", "genealogy", "mediawiki", "semantic"]
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
	# Wikipush toolkit
	# https://wiki.bitplan.com/index.php/Py-3rdparty-mediawiki
	"py-3rdparty-mediawiki>=0.12.1",
	# https://pypi.org/project/py-ez-wikidata/
	"py-ez-wikidata>=0.2.3",

	# Template parsing
	# https://pypi.org/project/mwparserfromhell/
	"mwparserfromhell>=0.6.6",
	# reactive user interface
	# nicegui
    # fastapi
	# uvicorn
    "nicegui>=2.1.0",
    "ngwidgets>=0.19.1",
    # progress bar
    # https://pypi.org/project/tqdm/
    "tqdm>=4.66.5",
    # Parquet file access
    # https://arrow.apache.org/docs/python/index.html
    "pyarrow>=17.0.0",

    # HTTP requests library
    # https://pypi.org/project/requests/
    "requests>=2.31.0",

    # Nominatim geocoding library
    # https://pypi.org/project/geopy/
    "geopy>=2.3.0",

    # platform independent knowledge graph ready list of dicts (table) handling
    # https://pypi.org/project/pyLodStorage/
    "pyLodStorage>=0.12.4",

    # Wikidata Grid and WdItemSearch
    # https://pypi.org/project/wdgrid/
    "wdgrid>=0.1.2"
]

requires-python = ">=3.9"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "genwiki/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/genwiki2024"
Documentation = "https://wiki.bitplan.com/index.php/genwiki2024"
Source = "https://github.com/WolfgangFahl/genwiki2024"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["genwiki","genwiki_examples"]

[tool.hatch.build.targets.wheel.sources]
"genwiki" = "genwiki"
"genwiki_examples" = "genwiki_examples"

[project.scripts]
genwiki = "genwiki.genwiki_cmd:main"
